# haskell-cci

./: 0001-verbs-Sets-connection-field-of-receive-events-was-al.patch  COPYING  NOTES.md  README  README.md  cci.cabal  cci.supp  core_base_open.c  core_base_open_sock.c  core_base_open_verbs.c  ctp_base_open_sock.c  ctp_base_open_verbs.c  design.txt
Network/: CCI.hs  CCI.hsc
examples/: Client.hs  Server.hs  pingpong.hs  registration-benchmark.hs
test/: Commands.hs  Driver.hs  NOTES.md  Props.hs  README  README.md  TestGen.hs  Worker.hs  design.txt  test_cci.hs  testlib.c  testlib.h
test/sglib-doc/: index.html
