--
-- Copyright (C) 2012 Parallel Scientific. All rights reserved.
--
-- See the accompanying COPYING file for license information.
--

Name:         cci
Version:      0.1.0
Synopsis:     Bindings for the CCI networking library
Description:  The CCI project is an open-source communication interface that 
              aims to provide a simple and portable API, high performance, 
              scalability for the largest deployments, and robustness in the 
              presence of faults. It is developed and maintained by a 
              partnership of research, academic, and industry members.
              .
              See <http://www.olcf.ornl.gov/center-projects/common-communication-interface> 
              for details.

License:             BSD3
License-file:        COPYING
Author:              Facundo Domínguez, Parallel Scientific LLC
Maintainer:          Facundo Domínguez <facundo.dominguez@parsci.com>
Category:            Network
Build-Type:          Simple
Cabal-Version:       >= 1.8

source-repository head
    type:     git
    location: https://parsci.assembla.com/code/cci-haskell/git/nodes

source-repository this
    type:     git
    location: https://parsci.assembla.com/code/cci-haskell/git/nodes
    tag:      0.1.0


Library
  exposed-modules:     Network.CCI
  other-modules:       

  build-depends:       base >= 4.3 && < 5
                       , bytestring
                       
  ghc-options:      -O -Wall

  include-dirs:   cci/include, cci/src
  extra-libraries:  ltdl, rdmacm
  c-sources:
                    cci/src/plugins/base/init.c
                    cci/src/plugins/base/open.c
                    cci/src/plugins/base/close.c

                    cci/src/plugins/core/base/verify.c
                    cci/src/plugins/core/base/close.c

                    cci/src/api/arm_os_handle.c
                    cci/src/api/rma_register.c
                    cci/src/api/init.c
                    cci/src/api/finalize.c
                    cci/src/api/send.c
                    cci/src/api/create_endpoint.c
                    cci/src/api/rma.c
                    cci/src/api/return_event.c
                    cci/src/api/accept.c
                    cci/src/api/get_devices.c
                    cci/src/api/set_opt.c
                    cci/src/api/strerror.c
                    cci/src/api/connect.c
                    cci/src/api/get_opt.c
                    cci/src/api/sendv.c
                    cci/src/api/get_event.c
                    cci/src/api/reject.c
                    cci/src/api/destroy_endpoint.c
                    cci/src/api/disconnect.c
                    cci/src/api/rma_deregister.c

                    cci/src/util/argv.c

  if flag(static-verbs)
    c-sources:
                    core_base_open_verbs.c
                    cci/src/plugins/core/verbs/core_verbs_module.c
                    cci/src/plugins/core/verbs/core_verbs_api.c

  else
--    extra-lib-dirs:  /home/facundo.dominguez/cci-haskell/cci/built/lib
--    extra-libraries:  cci
    c-sources:
                    core_base_open_sock.c
                    cci/src/plugins/core/sock/core_sock_module.c
                    cci/src/plugins/core/sock/core_sock_api.c



Flag examples
  Description: Build examples
  Default: False

Flag static-verbs
  Description: Builds cci statically and makes it load the verbs driver exclusively.
  Default: False

Executable ex-client
  main-is:        examples/Client.hs
  ghc-options:    -O -Wall -idist/build
  if flag(examples)
    build-depends:  base, bytestring, cci
  else
    buildable: False

Executable ex-pingpong
  main-is:        examples/pingpong.hs
  ghc-options:    -O -Wall -idist/build -threaded
  if flag(examples)
    build-depends:  base, bytestring, cci, time
  else
    buildable: False

Executable ex-server
  main-is:        examples/Server.hs
  ghc-options:    -O -Wall -idist/build
  if flag(examples)
    build-depends:  base, bytestring, cci
  else
    buildable: False

Test-Suite test-cci
  type:           exitcode-stdio-1.0
  main-is:        Props.hs
  hs-source-dirs: test
  build-depends:  base, bytestring, cci, containers, binary, process, filepath, mtl, random >= 1.0.1.0, pretty
  ghc-options:    -O -Wall -fno-warn-name-shadowing -idist/build

Executable test-Worker
  main-is:        Worker.hs
  ghc-options:    -O -Wall -idist/build -threaded
  hs-source-dirs: test
  if flag(examples)
    build-depends:  base, bytestring, cci, time, containers, binary
  else
    buildable: False


