--
-- Copyright (C) 2012 Parallel Scientific. All rights reserved.
--
-- See the accompanying COPYING file for license information.
--

Name:         cci
Version:      0.3.0
Synopsis:     Bindings for the CCI networking library
Description:  The CCI project is an open-source communication interface that 
              aims to provide a simple and portable API, high performance, 
              scalability for the largest deployments, and robustness in the 
              presence of faults. It is developed and maintained by a 
              partnership of research, academic, and industry members.
              .
              See <http://cci-forum.com> for details.

License:             BSD3
License-file:        COPYING
Author:              Facundo Domínguez, Parallel Scientific LLC
Maintainer:          Facundo Domínguez <facundo.dominguez@parsci.com>
Category:            Network
Build-Type:          Simple
Cabal-Version:       >= 1.8

source-repository head
    type:     git
    location: https://parsci.assembla.com/code/cci-haskell/git/nodes

source-repository this
    type:     git
    location: https://parsci.assembla.com/code/cci-haskell/git/nodes
    tag:      0.3.0


Library
  exposed-modules:     Network.CCI
  other-modules:       

  build-depends:       base >= 4.3 && < 5
                       , bytestring
                       
  ghc-options:      -O -Wall

  include-dirs:   cci/include, cci/src, cci/src/api
  if flag(static-verbs) || flag (static-sock)
    c-sources:
                    cci/src/plugins/base/init.c
                    cci/src/plugins/base/open.c
                    cci/src/plugins/base/close.c

                    cci/src/plugins/ctp/base/verify.c
                    cci/src/plugins/ctp/base/close.c

                    cci/src/api/arm_os_handle.c
                    cci/src/api/rma_register.c
                    cci/src/api/init.c
                    cci/src/api/finalize.c
                    cci/src/api/send.c
                    cci/src/api/create_endpoint.c
                    cci/src/api/rma.c
                    cci/src/api/return_event.c
                    cci/src/api/accept.c
                    cci/src/api/get_devices.c
                    cci/src/api/set_opt.c
                    cci/src/api/strerror.c
                    cci/src/api/connect.c
                    cci/src/api/get_opt.c
                    cci/src/api/sendv.c
                    cci/src/api/get_event.c
                    cci/src/api/reject.c
                    cci/src/api/destroy_endpoint.c
                    cci/src/api/disconnect.c
                    cci/src/api/rma_deregister.c

                    cci/src/util/argv.c

  if flag(static-verbs)
    c-sources:
                    ctp_base_open_verbs.c
                    cci/src/plugins/ctp/verbs/ctp_verbs_module.c
                    cci/src/plugins/ctp/verbs/ctp_verbs_api.c

  else
   if flag(static-sock)
    c-sources:
                    ctp_base_open_sock.c
                    cci/src/plugins/ctp/sock/ctp_sock_module.c
                    cci/src/plugins/ctp/sock/ctp_sock_api.c
   else
    extra-libraries:  cci


Flag tests
  Description: Build tests
  Default: False

Flag examples
  Description: Build examples
  Default: False

Flag static-verbs
  Description: Builds cci statically and makes it load the verbs driver exclusively.
  Default: False

Flag static-sock
  Description: Builds cci statically and makes it load the sock driver exclusively.
  Default: False

Executable ex-client
  main-is:        examples/Client.hs
  ghc-options:    -O -Wall -idist/build
  if flag(examples)
    build-depends:  base, bytestring, cci
  else
    buildable: False

Executable ex-pingpong
  main-is:        examples/pingpong.hs
  ghc-options:    -O -Wall -idist/build -threaded
  if flag(examples)
    build-depends:  base, bytestring, cci, time
  else
    buildable: False

Executable ex-server
  main-is:        examples/Server.hs
  ghc-options:    -O -Wall -idist/build
  if flag(examples)
    build-depends:  base, bytestring, cci
  else
    buildable: False

Executable test-cci
  main-is:        test_cci.hs
  hs-source-dirs: test
  ghc-options:    -O -Wall -fno-warn-name-shadowing -idist/build
  if flag(tests)
    build-depends:  base<4.6, bytestring<0.10, cci, containers<0.5, binary<0.6, process<1.2
                  , filepath<1.4, mtl, random >= 1.0.1.0 && < 1.1, cmdargs<0.11, pretty<1.2
  else
    buildable: False

Executable test-Worker
  main-is:        Worker.hs
  ghc-options:    -O -Wall -idist/build -threaded
  hs-source-dirs: test
  if flag(tests)
    build-depends:  base, bytestring, cci, time, containers, binary
  else
    buildable: False


