Name:          cci
Version:       0.3.0
Synopsis:      Bindings for the CCI networking library
Description:   The CCI project is an open source communication interface that
               aims to provide a simple and portable API, high performance,
               scalability for the largest deployments, and robustness in the
               presence of faults. It is developed and maintained by a
               partnership of research, academic, and industry members.
               .
               See <http://cci-forum.com> for details.
Copyright:     (C) 2012-2013 Parallel Scientific Labs, LLC
Maintainer:    Facundo Domínguez <facundo.dominguez@parsci.com>
License:       BSD3
License-file:  COPYING
Category:      Network
Build-Type:    Simple
Cabal-Version: >= 1.8

source-repository head
    type:     git
    location: https://parsci.assembla.com/code/cci-haskell/git/nodes

source-repository this
    type:     git
    location: https://parsci.assembla.com/code/cci-haskell/git/nodes
    tag:      0.3.0


Library
  exposed-modules:     Network.CCI
  other-modules:       

  build-depends:       base >= 4.3
                       , bytestring
                       
  ghc-options:      -O -Wall

  extra-libraries:  cci


Flag tests
  Description: Build tests
  Default: False

Flag examples
  Description: Build examples
  Default: False

Executable ex-client
  main-is:        examples/Client.hs
  ghc-options:    -O -Wall -idist/build
  if flag(examples)
    build-depends:  base, bytestring, cci
  else
    buildable: False

Executable ex-pingpong
  main-is:        examples/pingpong.hs
  ghc-options:    -O -Wall -idist/build -threaded
  if flag(examples)
    build-depends:  base, bytestring, cci, time
  else
    buildable: False

Executable ex-server
  main-is:        examples/Server.hs
  ghc-options:    -O -Wall -idist/build
  if flag(examples)
    build-depends:  base, bytestring, cci
  else
    buildable: False

Executable test-cci
  main-is:        test_cci.hs
  hs-source-dirs: test
  ghc-options:    -O -Wall -fno-warn-name-shadowing -idist/build
  if flag(tests)
    build-depends:  base, bytestring, cci, containers, binary, process
                  , filepath, mtl, random, cmdargs<0.11, pretty
  else
    buildable: False

Executable test-Worker
  main-is:        Worker.hs
  ghc-options:    -O -Wall -idist/build -threaded
  hs-source-dirs: test
  if flag(tests)
    build-depends:  base, bytestring, cci, time, containers, binary
  else
    buildable: False


